[gd_scene load_steps=19 format=3 uid="uid://c8pol2hi57uhi"]

[ext_resource type="Script" uid="uid://clylldhbiv4qp" path="res://scenes/customers/Customers.gd" id="1_y5hdc"]
[ext_resource type="Texture2D" uid="uid://dqt2p753u8lem" path="res://assets/npc_boy 1.png" id="2_f517g"]
[ext_resource type="Texture2D" uid="uid://dtdwkk32srhvv" path="res://assets/npc_boy2.png" id="3_mp505"]
[ext_resource type="Texture2D" uid="uid://bmia460vete2i" path="res://assets/npc_girl 1.png" id="4_4jawt"]
[ext_resource type="Texture2D" uid="uid://b2rl41qemtwyc" path="res://assets/npc_girl 2.png" id="5_23u41"]
[ext_resource type="Script" uid="uid://cf21ick0d30vo" path="res://scenes/customers/StateMachine.cs" id="6_4jawt"]
[ext_resource type="Script" uid="uid://5xmbifb6egg5" path="res://scenes/customers/Idle.cs" id="6_mp505"]
[ext_resource type="Script" uid="uid://cqm8wmrp5oiuu" path="res://scenes/customers/Walk.cs" id="7_mp505"]
[ext_resource type="Script" uid="uid://s4yqjk7y3wl6" path="res://scenes/customers/bump_detection.gd" id="9_55rdo"]
[ext_resource type="Texture2D" uid="uid://bi5plee8bijcr" path="res://assets/circle.png" id="9_hpy8n"]
[ext_resource type="Texture2D" uid="uid://dt0ts31f8smep" path="res://assets/cuite.png" id="10_55rdo"]
[ext_resource type="Script" uid="uid://doyt3o2y3iax8" path="res://scenes/customers/detection_zone.gd" id="12_ekhsc"]
[ext_resource type="AudioStream" uid="uid://htv5ychi48wk" path="res://assets/cash.mp3" id="13_04ly2"]

[sub_resource type="SpriteFrames" id="SpriteFrames_pm32s"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_f517g")
}, {
"duration": 1.0,
"texture": ExtResource("3_mp505")
}],
"loop": true,
"name": &"npc_boy",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("4_4jawt")
}, {
"duration": 1.0,
"texture": ExtResource("5_23u41")
}],
"loop": true,
"name": &"npc_girl",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_mp505"]
radius = 36.4966

[sub_resource type="CircleShape2D" id="CircleShape2D_04ly2"]
radius = 170.238

[sub_resource type="CircleShape2D" id="CircleShape2D_4jawt"]
radius = 86.093

[sub_resource type="LabelSettings" id="LabelSettings_ekhsc"]
font_size = 25
font_color = Color(0, 0, 0, 1)

[node name="Customer" type="CharacterBody2D" groups=["npc"]]
collision_layer = 3
collision_mask = 3
script = ExtResource("1_y5hdc")

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="."]

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
scale = Vector2(0.570707, 0.570707)
sprite_frames = SubResource("SpriteFrames_pm32s")
animation = &"npc_boy"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-3, -1)
shape = SubResource("CircleShape2D_mp505")

[node name="DetectionZone" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 2
script = ExtResource("12_ekhsc")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="DetectionZone"]
shape = SubResource("CircleShape2D_04ly2")
debug_color = Color(0.657332, 0.651722, 0.079529, 0.42)

[node name="StateMachine" type="Node" parent="."]
script = ExtResource("6_4jawt")

[node name="Idle" type="Node" parent="StateMachine" node_paths=PackedStringArray("AnimatedSprite", "Character")]
script = ExtResource("6_mp505")
AnimatedSprite = NodePath("../../AnimatedSprite2D")
Character = NodePath("../..")

[node name="Walk" type="Node2D" parent="StateMachine" node_paths=PackedStringArray("Character", "NavAgent", "AnimatedSprite", "bump")]
script = ExtResource("7_mp505")
Character = NodePath("../..")
NavAgent = NodePath("../../NavigationAgent2D")
AnimatedSprite = NodePath("../../AnimatedSprite2D")
MaxSpeed = 70.0
bump = NodePath("../../BumpDetection")

[node name="BumpDetection" type="Area2D" parent="." groups=["npc"]]
script = ExtResource("9_55rdo")

[node name="CollisionShape2D" type="CollisionShape2D" parent="BumpDetection"]
shape = SubResource("CircleShape2D_4jawt")
debug_color = Color(0.873463, 0.296289, 0.470524, 0.42)

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="TextureRect" type="TextureRect" parent="Control"]
layout_mode = 0
offset_left = -135.0
offset_top = -135.0
offset_right = -37.0
offset_bottom = -34.0
texture = ExtResource("9_hpy8n")
expand_mode = 1
stretch_mode = 4

[node name="item_img" type="TextureRect" parent="Control/TextureRect"]
layout_mode = 0
offset_left = -66.0
offset_top = -65.0
offset_right = 179.0
offset_bottom = 170.0
texture = ExtResource("10_55rdo")
expand_mode = 1
stretch_mode = 6

[node name="Label" type="Label" parent="Control/TextureRect"]
layout_mode = 0
offset_left = 60.0
offset_top = 49.0
offset_right = 100.0
offset_bottom = 84.0
text = "3"
label_settings = SubResource("LabelSettings_ekhsc")

[node name="cash_sound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("13_04ly2")
